# wisteria-v1

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1588ae692435_add_orders_and_order_items_tables.py  f0ed3a8373d5_create_products_and_admin_users_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py  rate_limit.py
backend/app/models/: __init__.py  admin_user.py  base.py  order.py  product.py
backend/app/routers/: admin_products.py  auth.py  health.py  products.py
backend/app/schemas/: __init__.py  auth.py  order.py  product.py
backend/app/services/: auth.py  product.py
backend/app/utils/: __init__.py  security.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_products.py  test_auth.py  test_products.py
docker/: docker-compose.yml
docs/: agent-instructions.md  phase-0-takeaways.md  phase-1-takeaways.md  phase-2-takeaways.md  phase-3-takeaways.md  phase-4a-takeaways.md  phase-4b-takeaways.md  phase-4c-takeaways.md  phase-5-plan.md  phase-5a-takeaways.md  phase-playbook.md  plan.md  todo.md
docs/decisions/: 001-monorepo-structure.md  002-fastapi-sqlalchemy-async.md  003-uuids-integer-cents.md  004-stripe-checkout-redirect.md  005-zustand-cart-state.md  006-resend-email.md  007-docker-compose-local-dev.md  008-server-vs-client-components.md  009-bcrypt-direct-over-passlib.md  (+4 more)
frontend/: Dockerfile  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+38 files in other folders)
