[project]
name = "wisteria-backend"
version = "0.1.0"
description = "Wisteria — Japanese figurine e-commerce API"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# B008: FastAPI uses Depends() in function defaults by design.
# This is the official pattern, not a bug.
"app/routers/*.py" = ["B008"]
"app/dependencies.py" = ["B008"]
# Seed script has long description strings — data, not code.
"scripts/seed.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
